feat: M8-2 - fix 5 low gaps (isIteratorLike/thread-pool/JsIterable-guard/Reflect-guard/tools-evidence)
Co-Authored-By: Claude <noreply@anthropic.com>